revert css change to fix toolbar wrapping bug

--- a/static/css/drawer.css
+++ b/static/css/drawer.css
@@ -151,7 +151,6 @@ h1, legend,
     height: 44px;
     opacity: 0.75;
     vertical-align: middle;
-    width: 20ex;
 }
 #buttonbar div {
     border-radius: 5px;
